test/typecheck/bad-assertreturn-type-mismatch.txt
;;; TOOL: wast2json
;;; ERROR: 1
(module
  (func (param i32) (result i32) get_local 0)
  (export "foo" 0))
(assert_return (invoke "foo" (i32.const 0)) (f32.const 0))
(;; STDERR ;;;
out/test/typecheck/bad-assertreturn-type-mismatch.txt:5:17: error: unexpected token 0, expected (.
  (export "foo" 0))
                ^
;;; STDERR ;;)
